responsive: fix menu on mobile

--- a/css/partials/_header.scss
+++ b/css/partials/_header.scss
@@ -328,22 +328,22 @@ header {
 
 	.menu {
 		&-top {
-			// display: none;
-			position: fixed;
-			z-index: 20;
+			align-items: flex-start;
 			background-color: $white;
-			color: $primary-color;
-			font-weight: 600;
-			flex-direction: column;
-			width: 300px;
-			top: 0;
 			bottom: 0;
-			left: 100%;
-			transform: translate3d(0, 0, 0);
-			// display: flex;
-			// transform: translateX(-100%);
+			color: $primary-color;
+			flex-direction: column;
+			font-size: 1.125em;
+			font-weight: 600;
 			justify-content: center;
+			left: 100%;
+			padding: 2rem;
+			position: fixed;
+			top: 0;
+			transform: translate3d(0, 0, 0);
 			transition: transform 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
+			width: 380px;
+			z-index: 20;
 
 			> li {
 				margin-left: 0;
@@ -394,11 +394,10 @@ header {
 	}
 
 	.menu {
-		&-aside {
+		&-top {
 			font-size: 1.1em;
 			min-width: 280px;
-			padding-top: 2rem;
-			padding-bottom: 2rem;
+			width: 100%;
 		}
 	}
 }
